<resources>
    <!-- Miscellaneous strings-->
    <string name="login_label">Login</string>
    <string name="home_label">Home</string>
    <string name="settings_label">Settings</string>

    <string name="tts">Text To Speech</string>
    <string name="app_name">mandha1 Travelling Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="connection_error">Connection Error :(</string>
    <string name="loading">Loading…</string>
    <string name="change_theme">Change theme</string>
    <string name="translate_the_text">Enter text to be translated into target language</string>

    <!-- Quiz layout strings -->
    <string name="country_quiz">%1$s Quiz</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect. %1$s was the correct answer.</string>
    <string name="please_select_an_answer">Please select an answer.</string>
    <string name="score">Score: %1$s</string>
    <string name="back_home">Back to Home</string>

    <!-- Login/register layout strings (localized for Japanese) -->
    <string name="create_acc">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_details">Login Details</string>
    <string name="delete_login_details">Delete Login Details</string>
    <string name="set_em">Set email</string>
    <string name="set_pw">Set password</string>
    <string name="confirm_pw">Confirm password</string>
    <string name="reg_label">Register</string>
    <string name="reg_as_new_user">Register as a new user</string>
    <string name="email_addr">Email Address</string>
    <string name="sign_out">Sign Out</string>

    <!-- Country page layout strings (localized for Japanese) -->
    <string name="countrypage_label">%1$s Country Page</string>
    <string name="pp_label">Popular Phrases</string>
    <string name="qu_label">Quiz</string>
    <string name="at_label">Attractions</string>
    <string name="tr_label">Text Translation</string>

    <string name="play">Play Quiz</string>
    <string name="translate">Translate</string>

    <string name="view_phrases">View Phrases</string>
    <string name="view_attractions">View Attractions</string>
</resources>