<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.texttranslation.TextTranslationFragment">

    <data>
        <variable
            name="textTranslationViewModel"
            type="op.mobile.app.dev.mandha1.travelling.ui.texttranslation.TextTranslationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:text="@string/hello_blank_fragment"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_translate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_tr_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{textTranslationViewModel::setToBeTranslatedText}"
                android:hint="Enter text to be translated into target language"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_translatedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{textTranslationViewModel.response.text[0]}"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintBottom_toTopOf="@+id/btn_translate"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:layout_editor_absoluteX="205dp" />

        <Button
            android:id="@+id/btn_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginEnd="146dp"
            android:onClick="@{() -> textTranslationViewModel.getTranslatedText(textTranslationViewModel.translateText)}"
            android:text="@string/translate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="412dp" />

        <Button
            android:id="@+id/btn_tts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="146dp"
            android:onClick="@{() -> textTranslationViewModel.speak(textTranslationViewModel.response.text[0])}"
            android:text="@string/tts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_translate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

